# custom-oracle

./: Cargo.toml  README.md
examples/: package.json
examples/lib/common/: date.ts  runnable.ts  utils.ts
examples/src/oracle/: update_msol_oracle.ts  update_oracle.ts
exsamples/: tsconfig.json
exsamples/lib/common/: index.ts  utils.ts
exsamples/src/: index.ts
exsamples/src/oracle/: update_msol_oracle.ts
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
