[package]
name = "custom-oracle"
version = "1.0.0"
description = "Custom Oracle"
authors = []
repository = ""
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.11.4"
thiserror = "1.0"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-sdk = "1.11.4"
roots = "0.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
